# IncentEdge

./: .dockerignore  .env.docker  .env.example  .gitignore  .replit  API_DOCUMENTATION.md  AUDIT_REPORT.md  BETA_INVITE_MATERIALS.md  CHANGELOG.md  COMPREHENSIVE_TEST_SUITE_CREATED.md  DATABASE_OPTIMIZATION.md  DATA_IMPORT_COMPLETE.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SUMMARY.md  DESIGN_SYSTEM.md  Dockerfile  ENCRYPTION_CHECKLIST.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENCRYPTION_QUICK_START.md  EXECUTION_SUMMARY.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPORT_QUICK_START.md  IMPORT_SUMMARY.md  INCENTIVE_EXTRACTION_IMPLEMENTATION.md  INCENTIVE_EXTRACTION_QUICK_START.md  IncentEdge_API.postman_collection.json  LAUNCH-DASHBOARD.html  LAUNCH_READY_SUMMARY.md  LEAD_CAPTURE_IMPLEMENTATION.md  LEAD_CAPTURE_QUICK_START.md  LINKEDIN_OAUTH_SETUP.md  LOGGING_QUICK_START.md  LOGGING_SYSTEM_SUMMARY.md  PHASE-2-COMPLETION-STATUS.md  ROLLBACK_PROCEDURE.md  SAMPLE_INCENTIVES_EXTRACTION.md  SAMPLE_INCENTIVES_USAGE_GUIDE.md  (+68 more)
.planning/: ARCHITECTURE.md  PHASE-2-SUMMARY.md  ROADMAP.md  STATE.md  TESTING_STRATEGY.md
attached_assets/: NYC-NYS-Westchester Energy Incentives List grok.html  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server-index-ts-4-07-00-AM-express-servi-1750738609519_1750738609520.txt  Pasted-Thanks-for-the-full-context-and-yes-this-is-a-Replit-specific-Vite-port-domain-routing-issue-Y-1752882211268_1752882211271.txt  code.txt  data_sources_1752883429116.csv  doe_1750732321801.yaml  esd_1750732321805.yaml  (+5 more)
(+613 files in other folders)
